k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-dev
  labels:
    project: node-app-devsecops-lab
    environment: dev
    managed-by: kubernetes
