k8s/base/node-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  namespace: devsecops-dev
  labels:
    app: node-app
    project: node-app-devsecops-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: ghcr.io/jcsa2030/elhalawany-devops-lab:security
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: devsecops-dev
spec:
  selector:
    app: node-app
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
